--- a/src/views/pages/account/card-fill.ejs
+++ b/src/views/pages/account/card-fill.ejs
@@ -35,8 +35,11 @@
 
             <hr />
 
-            <div class="aside-content__item logout-btn">
-                <p id="logoutButton">Đăng xuất</p>
+            <div class="aside-item logout-btn">
+                <a style='text-decoration: none' id="logoutButton">
+                    <p>Đăng xuất</p>
+                </a>
+                <!-- <button id="logoutButton" style='text-decoration: none'>Đăng xuất</button> -->
             </div>
             <div class="popup">
                 <div class="popup__main">
@@ -44,7 +47,7 @@
                         <div class="popup--top">
                             <p class="popup__title">Đăng xuất</p>
                             <div class="close-btn">
-                                <span class="material-symbols-outlined">cancel</span>
+                                    <span class="material-symbols-outlined">cancel</span>
                             </div>
                         </div>
                     </div>
@@ -121,6 +124,7 @@
     <script src="/scripts/credit-account-popup.js"></script>
     <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/header-medium.js"></script>
+    <script src="/scripts/logout-popup.js"></script>
 
 </body>
 
