--- a/src/public/styles/components/search-bar.css
+++ b/src/public/styles/components/search-bar.css
@@ -22,6 +22,7 @@
     justify-content: space-between;
     width: 130%;
     padding: 8px;
+    position: relative;
 }
 
 .search-address {
@@ -171,12 +172,14 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .search-quality {
-    position: sticky;
+    position: absolute;
+    top: 100%;
+    right: 0;
     z-index: 100000;
     /* opacity: 0; */
     display: none;
-    margin-left: 60%;
-    margin-top: -6px;
+    /* margin-left: 60%; */
+    /* margin-top: -6px; */
     width: 300px;
     height: 170px;
     /* display: flex; */
