--- a/src/views/pages/auth/login.ejs
+++ b/src/views/pages/auth/login.ejs
@@ -13,7 +13,7 @@
 <body>
     <%- include('../../partials/header-small-title', {
         title: 'Đăng nhập',
-        help: 'Bạn chưa có tài khoản?'
+        help: 'Bạn quên mật khẩu?'
     }) %>
 
     <main class="content-container">
