Fix header-medium and header full done, booking/payment, del-card, add-debit

--- a/src/public/styles/components/otp.css
+++ b/src/public/styles/components/otp.css
@@ -142,3 +142,11 @@ h1 {
 		transform: translateY(0);
 	}
 }
+
+/* del bank card */
+.del-bank-card .otp__card h1,
+.del-debit-card .otp__card h1 {
+	font-size: 35px;
+	text-align: center;
+	margin: 100px auto 45px auto;
+}
