--- a/src/views/components/conform-del-bank.ejs
+++ b/src/views/components/conform-del-bank.ejs
@@ -2,7 +2,7 @@
     <div class="otp-container">
         <section class="otp">
             <div class="otp__card">
-                <h1>Xác nhận xóa thẻ</h1>
+                <h1>Xác nhận xóa thẻ?</h1>
                 <!-- <p class="otp__notice">Bạn có chắc chắc xóa thẻ</p>
                 <div class="otp__card-input">
                     <input type="text" class="form-control otp__card-text" maxlength="1">
