--- a/src/public/styles/components/room-in-hs.css
+++ b/src/public/styles/components/room-in-hs.css
@@ -13,7 +13,7 @@
 }
 
 .room-in-hs__detail {
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,7 +30,7 @@
 }
 
 .room-in__title {
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -42,6 +42,10 @@
     font-weight: 700;
     margin: 0;
     padding: 0;
+}
+
+.room-in-hs__name b {
+    white-space: nowrap;
 }
 
 .policy__price {
@@ -82,6 +86,7 @@
     color: #fe9c0b;
     font-size: 28px;
     font-weight: 900;
+    white-space: nowrap;
 }
 
 .price__room .room-day {
@@ -99,4 +104,8 @@
 .form--submit1,
 .form--submit2 {
     font-weight: 500;
+}
+
+.cancel-policy {
+    white-space: nowrap;
 }
