--- a/src/public/styles/pages/account/payment.css
+++ b/src/public/styles/pages/account/payment.css
@@ -91,12 +91,11 @@ body {
     margin: 12px;
 }
 
-
 .form {
     padding: 24px;
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
-    width: 75%;
+    width: 100%;
     align-items: center;
 }
 
@@ -117,7 +116,6 @@ body {
     gap: 30px;
     padding: 12px;
     flex-direction: column;
-    /* height: 200px; */
     width: 100%;
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
@@ -184,8 +182,14 @@ body {
 
 .form__card-detail img,
 .form__debit-detail-one img {
-    width: 38.491px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
+}
+
+.form-delete-debit .delete-btn,
+.form-delete-bank .delete-btn {
+    height: 40px;
+    width: 70px;
 }
 
 .form__card-detail,
@@ -198,6 +202,7 @@ body {
 .form__debit-detail-one .name-bank {
     font-size: 16px;
     font-weight: 300;
+    width: 120px;
 }
 
 .line-delete {
@@ -239,7 +244,7 @@ button.unfilled-default {
 
 .popup__main {
     position: relative;
-    background-color: #FAFAFA;
+    background-color: #fafafa;
     border-radius: 8px;
     margin: auto;
     width: 45%;
@@ -249,7 +254,6 @@ button.unfilled-default {
     justify-content: space-between;
     align-items: center;
     padding: 24px;
-
 }
 
 .close-btn {
@@ -325,7 +329,7 @@ button.btn--outlined.pri {
 
 .popup__main {
     position: relative;
-    background-color: #FAFAFA;
+    background-color: #fafafa;
     border-radius: 8px;
     margin: auto;
     width: 45%;
@@ -335,7 +339,6 @@ button.btn--outlined.pri {
     justify-content: space-between;
     align-items: center;
     padding: 24px;
-
 }
 
 .close-btn {
