--- a/src/public/styles/partials/footer.css
+++ b/src/public/styles/partials/footer.css
@@ -115,6 +115,10 @@ footer {
 	}
 }
 
+.footer-container__policy-list li {
+	white-space: nowrap;
+}
+
 .footer-container__update {
 	width: 33%;
 	display: flex;
@@ -143,4 +147,8 @@ footer {
 	display: flex;
 	gap: 10px;
 	justify-content: space-between;
+}
+
+.footer-container__form span {
+	white-space: nowrap;
 }
