fix date booking, add location in search result

--- a/src/views/pages/search/results.ejs
+++ b/src/views/pages/search/results.ejs
@@ -263,7 +263,11 @@
             </div>
         </aside>
         <section class="search-results">
-            <h2 class="search-results__content">Vũng Tàu: Tìm thấy 3.103 chỗ nghỉ</h2>
+            <h2 class="search-results__content">
+                <div id="search__content">
+                    <!-- <%= data[0].prov_name %> Tìm thấy <%= data.length %> chỗ nghỉ -->
+                </div>
+            </h2>
             <div class="search-results__filter">
                 <div class="search-results__filter__heading">
                     <span class="material-symbols-outlined">swap_vert</span>
