--- a/src/public/styles/pages/booking/detail.css
+++ b/src/public/styles/pages/booking/detail.css
@@ -4,7 +4,7 @@
 @import url("/styles/components/success-popup.css");
 
 html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     color: #000000;
 }
@@ -68,7 +68,7 @@ a {
     display: flex;
     align-items: center;
     color: var(--primary-color-4);
-    font-variation-settings: 'FILL' 1;
+    font-variation-settings: "FILL" 1;
 }
 
 .detail {
@@ -84,7 +84,6 @@ a {
     flex-direction: column;
     gap: 12px;
     padding: 12px;
-
 }
 
 .detail__col-1 {
@@ -128,7 +127,7 @@ a {
     gap: 12px;
     background-color: var(--primary-color-4);
     font-size: 0.875rem;
-    color: var(--white)
+    color: var(--white);
 }
 
 .detail__btn:hover {
@@ -168,7 +167,7 @@ a {
 .room__unit-price {
     font-size: 1.25rem;
     font-weight: 700;
-    color: var(--green)
+    color: var(--green);
 }
 
 .room__unit-price del {
@@ -188,6 +187,12 @@ a {
     height: 160px;
     object-fit: cover;
     border-radius: 8px;
+}
+
+.container--popup img {
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
 }
 
 .detail__code,
@@ -218,7 +223,6 @@ a {
 
 .abort__info,
 .abort__progress {
-
     display: inherit;
     flex-direction: column;
     gap: 8px;
@@ -260,7 +264,6 @@ a {
     font-weight: 600;
 }
 
-
 .modal-content {
     gap: 36px;
     align-items: center;
@@ -285,11 +288,11 @@ a {
 
 .modal-content span {
     font-size: 10rem;
-    font-variation-settings: 'FILL' 1;
+    font-variation-settings: "FILL" 1;
 }
 
 .modal-content p {
     font-size: 2rem;
     font-weight: 700;
-    font-variation-settings: 'FILL' 1;
+    font-variation-settings: "FILL" 1;
 }
