--- a/src/views/components/bank-account-popup.ejs
+++ b/src/views/components/bank-account-popup.ejs
@@ -30,11 +30,11 @@
                             <p>(In hoa, không dấu)</p>
                         </div>
                         <input name="bank_name_pers" class="form-control" type="text"
-                            placeholder="Nhập tên chủ tài khoản" />
+                            placeholder="Nclose-btnhập tên chủ tài khoản" />
                     </div>
                 </div>
                 <div class="account__button">
-                    <button class="form-button--submit1 close-btn">Hủy</button>
+                    <button class="form-button--submit1 ">Hủy</button>
 
                     <button class="form-button--submit2" type="submit">Hoàn thành</button>
                 </div>
