--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -19,6 +19,9 @@
         { text: 'Cá nhân', link: '#' },
         { text: 'Đổi mật khẩu', link: '/account/change-password' }
     ] }) %>
+    <%- include('../../components/on-top-btn') %>
+
+
     <div class="change-password-container">
         <aside class="aside-content">
             <div class="aside-content__profile">
@@ -132,6 +135,7 @@
     <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/header-medium.js"></script>
     <script src="/scripts/logout-popup.js"></script>
+    <script src="/scripts/base.js"></script>
 
 
 
