--- a/src/views/pages/account/history.ejs
+++ b/src/views/pages/account/history.ejs
@@ -27,6 +27,8 @@
         { text: "Cá nhân", link: "#" },
         { text: "Lịch sử đặt phòng", link: "/account/history" }
     ]}) %>
+    <%- include('../../components/on-top-btn') %>
+
 
     <main class="booking-history-container">
         <aside class="aside-content">
@@ -111,6 +113,8 @@
     <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/header-medium.js"></script>
     <script src="/scripts/logout-popup.js"></script>
+    <script src="/scripts/base.js"></script>
+
 
 
 
