--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -16,9 +16,11 @@
     <%- include("../../partials/header-medium", { user }) %>
     <%- include("../../partials/nav-tree", { nav_tree__data: [
         { text: "Trang chủ", link: "/" },
-        { text: "Tài khoản", link: null },
+        { text: "Cá nhân", link: null },
         { text: "Thông tin cá nhân", link: "/account/information" }
     ]}) %>
+    <%- include('../../components/on-top-btn') %>
+
 
 
     <div class="account-container">
@@ -193,6 +195,8 @@
     <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/header-medium.js"></script>
     <script src="/scripts/logout-popup.js"></script>
+    <script src="/scripts/base.js"></script>
+
 </body>
 
 </html>
