--- a/src/views/pages/booking/payment.ejs
+++ b/src/views/pages/booking/payment.ejs
@@ -250,7 +250,7 @@
 
         <div class="button-confirm">
           <button href="#" class="check-info check-info-booking">Kiểm tra lại thông tin</button>
-          <button class="submit-booking done-booking-btn" type='submit'>
+          <button href="/booking/success" class="submit-booking done-booking-btn" type='submit'>
             Hoàn tất đặt phòng
           </button>
         </div>
