--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -14,7 +14,9 @@
         <a href="/account/information" style="text-decoration: none;">
           <p><%= user?.last_name + ' ' + user?.first_name %></p>
         </a>
-        <img src="/imgs/user/<%= user?.avatar ?? 'default.jpg'%>" alt="avatar" class="avatar-btn-hf" />
+        <a href="/account/information">
+          <img src="/imgs/user/<%= user?.avatar ?? 'default.jpg'%>" alt="avatar" class="avatar-btn-hf" />
+        </a>
         <% } else { %>
         <a href="/auth/login" style='text-decoration: none;'>
           <button class="button-signin signin-btn-hf" type="button">
