--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/pages/account/change-password.css" />
+    <link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
 </head>
