--- a/src/views/pages/account/history.ejs
+++ b/src/views/pages/account/history.ejs
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/pages/account/history.css" />
+    <link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
 </head>
