--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="stylesheet" href="/styles/base.css">
   <link rel="stylesheet" href="/styles/pages/booking/information.css" />
+  <link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
   <title>2WAYS.com</title>
 </head>
 
