Update cancel booking

--- a/src/views/components/cancel-popup.ejs
+++ b/src/views/components/cancel-popup.ejs
@@ -78,7 +78,7 @@
 
                     </div>
                     <div class="cancel__close--btn">
-                        <span class="material-symbols-outlined closeIcon">cancel</span>
+                        <span class="material-symbols-outlined close-icon">cancel</span>
                     </div>
                 </div>
             </div>
