--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -204,19 +204,17 @@
                 </div>
                 <p class="progress__time"><%=booking.book_time_count_format%></p>
             </div>
-            <% if (booking.book_status == 0) {%> 
-            <button type="button" class="btn detail__btn" id="cancel-btn">Hủy đặt phòng</button>
-            <%} else if (booking.book_status == -1) {%>
+            <div class="abort__btn">
+                <% if (booking.book_status == 0) {%>
+                <button type="button" class="btn detail__btn" id="cancel-btn">Hủy đặt phòng</button>
+                <%} else if (booking.book_status == -1) {%>
                 <p>Bạn đã hủy đặt phòng</p>
-            <%}%>
+                <%}%>
+            </div>
         </section>
 
     </main>
-
-    <%- include('../../partials/footer') %>
-    <%- include('../../components/cancel-popup') %>
-    <%- include('../../components/success-popup') %>
-
+    
     <div class="modal fade fail-modal" id="fail-modal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-lg ">
             <div class="modal-content">
@@ -227,10 +225,13 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="/scripts/booking-detail.js"></script>
-    <script src="/scripts/review-popup.js" defer></script>
-    <script src="/scripts/cancel-popup.js"></script>
+    <%- include('../../partials/footer') %>
+                <%- include('../../components/cancel-popup') %>
+                <%- include('../../components/success-popup') %>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+                <script src="/scripts/booking-detail.js"></script>
+                <script src="/scripts/review-popup.js" defer></script>
+                <script src="/scripts/cancel-popup.js"></script>
 </body>
 
 
