--- a/src/views/pages/booking/success.ejs
+++ b/src/views/pages/booking/success.ejs
@@ -2,136 +2,138 @@
 <html lang="vi">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/pages/booking/success.css" />
-    <title>2WAYS.com</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
+	<link rel="stylesheet" href="/styles/pages/booking/success.css" />
+	<title>2WAYS.com</title>
 </head>
 
 <body>
-    <%- include('../../partials/header-small') %>
+	<%- include('../../partials/header-small') %>
 
-    <main class="content-container">
-        <section class="main-content">
-            <div class="order-status">
-                <div>
-                    <span class="material-symbols-outlined">done_all</span>
-                    <p>Đã xác nhận</p>
-                </div>
-                <h1>Đặt phòng của bạn ở <%= data[0].city_name %> đã được xác nhận.</h1>
-            </div>
+	<main class="content-container">
+		<section class="main-content">
+			<div class="order-status">
+				<div>
+					<span class="material-symbols-outlined">done_all</span>
+					<p>Đã xác nhận</p>
+				</div>
+				<h1>Đặt phòng của bạn ở <%= data[0].city_name %> đã được xác nhận.</h1>
+			</div>
 
-            <div class="order-description">
-                <div class="order-description__item">
-                    <span class="material-symbols-outlined">done</span>
-                    <p>Xác nhận đang được gửi tới <%= data[0].book_email %>.</p>
-                </div>
-                <div class="order-description__item">
-                    <span class="material-symbols-outlined">done</span>
-                    <p>Thanh toán của bạn sẽ được xử lý bởi chỗ nghỉ.</p>
-                </div>
-                <div class="order-description__item">
-                    <span class="material-symbols-outlined">done</span>
-                    <p>Giờ đây bạn có thể chỉnh sửa hoặc hủy đặt phòng cho đến khi nhận phòng. </p>
-                </div>
-            </div>
+			<div class="order-description">
+				<div class="order-description__item">
+					<span class="material-symbols-outlined">done</span>
+					<p>Xác nhận đang được gửi tới <%= data[0].book_email %>.</p>
+				</div>
+				<div class="order-description__item">
+					<span class="material-symbols-outlined">done</span>
+					<p>Thanh toán của bạn sẽ được xử lý bởi chỗ nghỉ.</p>
+				</div>
+				<div class="order-description__item">
+					<span class="material-symbols-outlined">done</span>
+					<p>Giờ đây bạn có thể chỉnh sửa hoặc hủy đặt phòng cho đến khi nhận phòng. </p>
+				</div>
+			</div>
 
-            <div class="order-save">
-                <button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">
-                    <span class="material-symbols-outlined">print</span>
-                    <p>In xác nhận đầy đủ</p>
-                </button>
-                <button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">
-                    <span class="material-symbols-outlined">download</span>
-                    <p>Lưu xác nhận vào điện thoại</p>
-                </button>
-            </div>
+			<div class="order-save">
+				<button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">
+					<span class="material-symbols-outlined">print</span>
+					<p>In xác nhận đầy đủ</p>
+				</button>
+				<button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">
+					<span class="material-symbols-outlined">download</span>
+					<p>Lưu xác nhận vào điện thoại</p>
+				</button>
+			</div>
 
-            <div class="order-summary">
-                <h2>Tóm tắt đơn đặt</h2>
-                <div class="order-summary__item">
-                    <img src="/imgs/accommodation/accommodation_1.jpg" alt="">
-                    <div class="order-summary__content">
-                        <h3><%= data[0].room_class %></h3>
-                        <div>
-                            <span class="material-symbols-outlined">local_atm</span>
-                            <p>Tổng giá: VND <%= data[0].book_cost_after %></p>
-                        </div>
-                        <div>
-                            <span class="material-symbols-outlined">calendar_month</span>
-                            <p><%if(data[0].book_start_dayofweek==1) { %> CN,
-                                <% } else { %>
-                                T<%- data[0].book_start_dayofweek %>,
-                                <% } %> ngày
-                                <%= data[0].book_start_day %> tháng
-                                <%= data[0].book_start_month %> -
-                                <%if(data[0].book_end_dayofweek==1) { %> CN,
-                                <% } else { %>
-                                T<%- data[0].book_end_dayofweek %>,
-                                <% } %> ngày
-                                <%= data[0].book_end_day %> tháng
-                                <%= data[0].book_end_month %>,
-                                <%= data[0].book_end_year %>,
-                                <%= data[0].book_num_day %> đêm </p>
-                        </div>
-                        <div>
-                            <span class="material-symbols-outlined">bed</span>
-                            <p><%= data[0].book_num_room %> phòng</p>
-                        </div>
-                    </div>
-                    <a href="/booking/detail" class="btn order-btn" role="button">Xem chi tiết</a>
-                </div>
-            </div>
-        </section>
+			<div class="order-summary">
+				<h2>Tóm tắt đơn đặt</h2>
+				<div class="order-summary__item">
+					<img src="/imgs/accommodation/accommodation_1.jpg" alt="">
+					<div class="order-summary__content">
+						<h3><%= data[0].room_class %></h3>
+						<div>
+							<span class="material-symbols-outlined">local_atm</span>
+							<p>Tổng giá: VND <%= data[0].book_cost_after %></p>
+						</div>
+						<div>
+							<span class="material-symbols-outlined">calendar_month</span>
+							<p>
+								<% if (data[0].book_start_dayofweek==1) { %> CN,
+								<% } else { %>
+								T<%- data[0].book_start_dayofweek %>,
+								<% } %> ngày
+								<%= data[0].book_start_day %> tháng
+								<%= data[0].book_start_month %> -
+								<% if(data[0].book_end_dayofweek==1) { %> CN,
+								<% } else { %>
+								T<%- data[0].book_end_dayofweek %>,
+								<% } %> ngày
+								<%= data[0].book_end_day %> tháng
+								<%= data[0].book_end_month %>,
+								<%= data[0].book_end_year %>,
+								<%= data[0].book_num_day %> đêm
+							</p>
+						</div>
+						<div>
+							<span class="material-symbols-outlined">bed</span>
+							<p><%= data[0].book_num_room %> phòng</p>
+						</div>
+					</div>
+					<a href="/booking/detail" class="btn order-btn" role="button">Xem chi tiết</a>
+				</div>
+			</div>
+		</section>
 
-        <section class="extend-content">
-            <div class="order-code">
-                <div>
-                    <p>Mã xác nhận: <%= data[0].book_id %></p>
-                    <span class="material-symbols-outlined">content_copy</span>
-                </div>
-                <div>
-                    <p>Mã PIN: 1230</p>
-                    <span class="material-symbols-outlined">content_copy</span>
-                </div>
-            </div>
-            <div class="extend-content__app">
-                <h2>Quản lý chuyến đi với ứng dụng</h2>
-                <div class="order-description">
-                    <div class="order-description__item">
-                        <span class="material-symbols-outlined">done</span>
-                        <p>Xác nhận đang được gửi tới <%= data[0].book_email %>.</p>
-                    </div>
-                    <div class="order-description__item">
-                        <span class="material-symbols-outlined">done</span>
-                        <p>Thanh toán của bạn sẽ được xử lý bởi chỗ nghỉ.</p>
-                    </div>
-                    <div class="order-description__item">
-                        <span class="material-symbols-outlined">done</span>
-                        <p>Giờ đây bạn có thể chỉnh sửa hoặc hủy đặt phòng cho đến khi nhận phòng. </p>
-                    </div>
-                </div>
-                <button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">Tải ứng dụng</button>
-            </div>
-        </section>
-    </main>
+		<section class="extend-content">
+			<div class="order-code">
+				<div>
+					<p>Mã xác nhận: <%= data[0].book_id %></p>
+					<span class="material-symbols-outlined">content_copy</span>
+				</div>
+				<div>
+					<p>Mã PIN: 1230</p>
+					<span class="material-symbols-outlined">content_copy</span>
+				</div>
+			</div>
+			<div class="extend-content__app">
+				<h2>Quản lý chuyến đi với ứng dụng</h2>
+				<div class="order-description">
+					<div class="order-description__item">
+						<span class="material-symbols-outlined">done</span>
+						<p>Xác nhận đang được gửi tới <%= data[0].book_email %>.</p>
+					</div>
+					<div class="order-description__item">
+						<span class="material-symbols-outlined">done</span>
+						<p>Thanh toán của bạn sẽ được xử lý bởi chỗ nghỉ.</p>
+					</div>
+					<div class="order-description__item">
+						<span class="material-symbols-outlined">done</span>
+						<p>Giờ đây bạn có thể chỉnh sửa hoặc hủy đặt phòng cho đến khi nhận phòng. </p>
+					</div>
+				</div>
+				<button type="button" class="btn order-btn" data-bs-toggle="modal" data-bs-target="#fail-modal">Tải ứng dụng</button>
+			</div>
+		</section>
+	</main>
 
-    <div class="modal fade" id="fail-modal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-lg ">
-            <div class="modal-content">
-                <div><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button></div>
-                <span class="material-symbols-outlined">cancel</span>
-                <p>Thực hiện thất bại, vui lòng thử lại sau!</p>
-            </div>
-        </div>
-    </div>
+	<div class="modal fade" id="fail-modal" tabindex="-1" aria-hidden="true">
+		<div class="modal-dialog modal-lg ">
+			<div class="modal-content">
+				<div><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button></div>
+				<span class="material-symbols-outlined">cancel</span>
+				<p>Thực hiện thất bại, vui lòng thử lại sau!</p>
+			</div>
+		</div>
+	</div>
 
-  <%- include('../../partials/footer') %>
+	<%- include('../../partials/footer') %>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
