Add js for /search/detail

--- a/src/public/styles/pages/search/detail.css
+++ b/src/public/styles/pages/search/detail.css
@@ -309,7 +309,12 @@ body {
 }
 
 .general-info__item--left {
+    width: 38%;
     font-weight: 600;
+}
+
+.general-info__item--right {
+    width: 62%;
 }
 
 .comment {
