--- a/src/public/styles/partials/header-medium.css
+++ b/src/public/styles/partials/header-medium.css
@@ -7,7 +7,7 @@ header {
 	justify-content: space-around;
 	width: 100%;
 	height: 240px;
-	background: url(/imgs/bg-header.png) no-repeat;
+	background: url(/imgs/header__background.png) no-repeat;
 	background-size: cover;
 	background-position: center;
 	background-color: var(--primary-color-1);
