Update cancel pop up

--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -49,7 +49,7 @@
             <h2>Tóm tắt hủy đặt phòng</h2>
             <div class="cancel-summary__item">
                 <div class="hotel-detail">
-                    <img src="../../public/imgs/milo.jpg" alt="">
+                    <img src="/imgs/accommodation/<%= data[0].acco_img_url %>" alt="">
                     <div class="rating">
                         <p><%= data[0].acco_name %></p>
                         <% for (let i = 0; i < data[0].acco_star; i++) { %>
