--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -229,7 +229,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="/scripts/booking-detail.js"></script>
 	<script src="/scripts/review-popup.js" defer></script>
-	<script src="/scripts/cancel-popup.js"></script>
+	<script src="/scripts/cancel-popup.js" defer></script>
 </body>
 
 </html>
