--- a/src/views/components/bank-account-popup.ejs
+++ b/src/views/components/bank-account-popup.ejs
@@ -30,7 +30,7 @@
                             <p>(In hoa, không dấu)</p>
                         </div>
                         <input name="bank_name_pers" class="form-control" type="text"
-                            placeholder="Nclose-btnhập tên chủ tài khoản" />
+                            placeholder="Nhập tên chủ tài khoản" />
                     </div>
                 </div>
                 <div class="account__button">
