Add [POST] /auth/change-password

--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -106,18 +106,18 @@
             <div class="form__items">
                 <div class="form__item">
                     <h1>Mật khẩu cũ:</h1>
-                    <input class="form-control" type="text" placeholder="Nhập mật khẩu cũ" />
+                    <input class="form-control" type="text" placeholder="Nhập mật khẩu cũ" name='oldPass'/>
                 </div>
 
                 <div class="form__item">
                     <h1>Mật khẩu mới:</h1>
-                    <input class="form-control form__password" type="text" placeholder="Nhập mật khẩu mới" />
+                    <input class="form-control form__password" type="text" placeholder="Nhập mật khẩu mới" name='newPass'/>
                     <div class="error-message" id="error-message"></div>
                 </div>
 
                 <div class="form__item">
                     <h1>Xác nhận mật khẩu:</h1>
-                    <input class="form-control form__password-confirm" type="text" placeholder="Nhập lại mật khẩu mới" />
+                    <input class="form-control form__password-confirm" type="text" placeholder="Nhập lại mật khẩu mới" name='newPassConfirm'/>
                 </div>
             </div>
             <div class="form__submitbutton">
