--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -44,16 +44,15 @@
                 </div>
             </div>
             <div class="cancel__button">
-                <a href="search/<%= data[0].acco_id %>"><button class="cancel__button--submit1">Đặt lại</button></a>
-
-                <a href="/"><button class="cancel__button--submit2">Tìm chỗ nghỉ khác</button></a>
+                <a href="search/<%= data[0].acco_id %>" class="cancel__button--submit1">Đặt lại</a>
+                <a href="/" class="cancel__button--submit2">Tìm chỗ nghỉ khác</a>
             </div>
         </section>
         <section class="extend-content">
             <h2>Tóm tắt hủy đặt phòng</h2>
             <div class="cancel-summary__item">
                 <div class="hotel-detail">
-                    <img src="../../public/imgs/milo.jpg" alt="">
+                    <img src="/imgs/accommodation/<%= data[0].acco_img_url %>" alt="">
                     <div class="rating">
                         <p><%= data[0].acco_name %></p>
                         <% for (let i = 0; i < data[0].acco_star; i++) { %>
@@ -108,8 +107,6 @@
     <%- include('../../partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="/scripts/cancellation.js" defer></script>
-
 </body>
 
 </html>
