--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -202,10 +202,12 @@
 			</div>
 			<div class="abort__btn">
 				<% if (booking.book_status==0) { %>
+				<input type="hidden" class="is-check-1" value="0">
 				<button type="button" class="btn detail__btn" id="cancel-btn">Hủy đặt phòng</button>
 				<% } else if (booking.book_status==-1) { %>
 				<p>Bạn đã hủy đặt phòng</p>
 				<% } %>
+				<input type="hidden" class="is-check-1" value="1">
 			</div>
 		</section>
 
@@ -229,7 +231,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="/scripts/booking-detail.js"></script>
 	<script src="/scripts/review-popup.js" defer></script>
-	<script src="/scripts/cancel-popup.js"></script>
+	<script src="/scripts/cancel-popup.js" defer></script>
 </body>
 
 </html>
