--- a/src/views/pages/booking/payment.ejs
+++ b/src/views/pages/booking/payment.ejs
@@ -2,193 +2,193 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/styles/base.css">
-  <link rel="stylesheet" href="/styles/pages/booking/payment.css" />
-  <link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<link rel="stylesheet" href="/styles/base.css">
+	<link rel="stylesheet" href="/styles/pages/booking/payment.css" />
+	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
 
-  <title>2WAYS.com</title>
+	<title>2WAYS.com</title>
 </head>
 
 
 <body>
-  <%- include('../../partials/header-small') %>
-  <%- include('../../partials/nav-tree', { nav_tree__data: [
+	<%- include('../../partials/header-small') %>
+	<%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: '/' },
         { text: 'Đặt phòng', link: '' },
         { text: 'Chọn phương thức thanh toán' }
     ] }) %>
 
-  <div class="payment-container">
-    <aside class="aside-wrapper">
-      <div class="aside-wrapper__hotel-detail">
-        <div class="aside-wrapper__type-hotel">
-          <h6><%= data.acco.type %></h6>
-          <div class="starts-icon">
-            <% for (let i = 0; i < data.acco.star; i++) { %>
-            <span class="material-symbols-outlined filled-start">
-              star_rate
-            </span>
-            <% } %>
-            <% for (let i = 0; i < 5 - data.acco.star; i++) { %>
-            <span class="material-symbols-outlined unfilled-start">
-              star_rate
-            </span>
-            <% } %>
-          </div>
-        </div>
-        <h5><b><%= data.acco.name %></b></h5>
-        <a href=""><%= data.acco.exac_location %></a>
-      </div>
+	<div class="payment-container">
+		<aside class="aside-wrapper">
+			<div class="aside-wrapper__hotel-detail">
+				<div class="aside-wrapper__type-hotel">
+					<h6><%= data.acco.type %></h6>
+					<div class="starts-icon">
+						<% for (let i = 0; i < data.acco.star; i++) { %>
+						<span class="material-symbols-outlined filled-start">
+							star_rate
+						</span>
+						<% } %>
+						<% for (let i = 0; i < 5 - data.acco.star; i++) { %>
+						<span class="material-symbols-outlined unfilled-start">
+							star_rate
+						</span>
+						<% } %>
+					</div>
+				</div>
+				<h5><b><%= data.acco.name %></b></h5>
+				<a href=""><%= data.acco.exac_location %></a>
+			</div>
 
-      <div class="aside-wrapper__your-booking-detail">
-        <h1>Chi tiết đặt phòng của bạn</h1>
-        <div class="aside-wrapper__check-date">
-          <div class="checkin-date">
-            <h5>Nhận phòng</h5>
-            <h5><b><%= data.search.checkIn %></b></h5>
-            <h5>Từ 14:00</h5>
-          </div>
+			<div class="aside-wrapper__your-booking-detail">
+				<h1>Chi tiết đặt phòng của bạn</h1>
+				<div class="aside-wrapper__check-date">
+					<div class="checkin-date">
+						<h5>Nhận phòng</h5>
+						<h5><b><%= data.search.checkIn %></b></h5>
+						<h5>Từ 14:00</h5>
+					</div>
 
-          <div class="checkout-date">
-            <h5>Trả phòng</h5>
-            <h5><b><%= data.search.checkOut %></b></h5>
-            <h5>Cho đến 00:00</h5>
-          </div>
-        </div>
+					<div class="checkout-date">
+						<h5>Trả phòng</h5>
+						<h5><b><%= data.search.checkOut %></b></h5>
+						<h5>Cho đến 00:00</h5>
+					</div>
+				</div>
 
-        <div class="aside-wrapper__countdown-time">
-          <span class="material-symbols-outlined"> error </span>
-          <h6>Còn 7 ngày nữa</h6>
-        </div>
+				<div class="aside-wrapper__countdown-time">
+					<span class="material-symbols-outlined"> error </span>
+					<h6>Còn 7 ngày nữa</h6>
+				</div>
 
-        <div class="aside-wrapper__total-length-stay">
-          <h5>Tổng thời gian lưu trú</h5>
-          <h5><b>1 đêm</b></h5>
-        </div>
+				<div class="aside-wrapper__total-length-stay">
+					<h5>Tổng thời gian lưu trú</h5>
+					<h5><b>1 đêm</b></h5>
+				</div>
 
-        <hr />
+				<hr />
 
-        <div class="your-choice">
-          <h5>Bạn đã chọn</h5>
-          <h5><b><%= data.acco.name %></b></h5>
-          <a href="javascript:history.back()"><b style="color: #0866ff">Đổi lựa chọn của bạn</b></a>
-        </div>
+				<div class="your-choice">
+					<h5>Bạn đã chọn</h5>
+					<h5><b><%= data.acco.name %></b></h5>
+					<a href="javascript:history.back()"><b style="color: #0866ff">Đổi lựa chọn của bạn</b></a>
+				</div>
 
-        <div class="cost-total">
-          <h6 class="red-line">VND <%= data.book.cost_before %></h6>
-          <div class="cost">
-            <h1>Giá</h1>
-            <h1>VND <%= data.book.cost_after %></h1>
-          </div>
-          <h6>Đã bao gồm thuế và phí</h6>
-        </div>
-      </div>
+				<div class="cost-total">
+					<h6 class="red-line">VND <%= data.book.cost_before %></h6>
+					<div class="cost">
+						<h1>Giá</h1>
+						<h1>VND <%= data.book.cost_after %></h1>
+					</div>
+					<h6>Đã bao gồm thuế và phí</h6>
+				</div>
+			</div>
 
-      <div class="aside-wrapper__cancel-fee">
-        <h5><b>Chi phí hủy phòng</b></h5>
-        <div class="aside-wrapper__cancel-free">
-          <span class="material-symbols-outlined"> check_circle </span>
-          <h6>Miễn phí hủy phòng bất kỳ lúc nào</h6>
-        </div>
-      </div>
-    </aside>
+			<div class="aside-wrapper__cancel-fee">
+				<h5><b>Chi phí hủy phòng</b></h5>
+				<div class="aside-wrapper__cancel-free">
+					<span class="material-symbols-outlined"> check_circle </span>
+					<h6>Miễn phí hủy phòng bất kỳ lúc nào</h6>
+				</div>
+			</div>
+		</aside>
 
-    <form id="" class="section-content" action='/booking/payment' method='post'>
-      <div class="section-content__confirm-account">
-        <img src="/imgs/user/<%= user.avatar ?? 'user_1.jpg' %>" alt="" />
-        <div class="account-detail">
-          <h5>Bạn đã đăng nhập bằng:</h5>
-          <div class="email-logout">
-            <h5><%= user.email %></h5>
-          </div>
-        </div>
-      </div>
-      <div class="section-content__select-methods">
-        <h1>Chọn phương thức thanh toán</h1>
-        <div class="section-content__select-method">
-          <div class="method method-one form-check">
-            <div class="method-choice">
-              <input class="material-symbols-outlined form-check-input" type="radio" value='1' name="pay_id" id="flexRadioDefault1" required />
-              <label class="form-check-label" for="flexRadioDefault1">
-                <h5><b>Thanh toán bằng tiền mặt</b></h5>
-              </label>
-            </div>
-          </div>
+		<form id="" class="section-content" action='/booking/payment' method='post'>
+			<div class="section-content__confirm-account">
+				<img src="/imgs/user/<%= user.avatar ?? 'user_1.jpg' %>" alt="" />
+				<div class="account-detail">
+					<h5>Bạn đã đăng nhập bằng:</h5>
+					<div class="email-logout">
+						<h5><%= user.email %></h5>
+					</div>
+				</div>
+			</div>
+			<div class="section-content__select-methods">
+				<h1>Chọn phương thức thanh toán</h1>
+				<div class="section-content__select-method">
+					<div class="method method-one form-check">
+						<div class="method-choice">
+							<input class="material-symbols-outlined form-check-input" type="radio" value='1' name="pay_id" id="flexRadioDefault1" required />
+							<label class="form-check-label" for="flexRadioDefault1">
+								<h5><b>Thanh toán bằng tiền mặt</b></h5>
+							</label>
+						</div>
+					</div>
 
-          <div class="method method-two form-check">
-            <div class="method-choice">
-              <input class="material-symbols-outlined form-check-input" type="radio" value='3' name="pay_id" id="flexRadioDefault2" />
-              <label class="form-check-label" for="flexRadioDefault2">
-                <h5><b>Thanh toán bằng thẻ tín dụng/ghi nợ</b></h5>
-              </label>
+					<div class="method method-two form-check">
+						<div class="method-choice">
+							<input class="material-symbols-outlined form-check-input" type="radio" value='3' name="pay_id" id="flexRadioDefault2" />
+							<label class="form-check-label" for="flexRadioDefault2">
+								<h5><b>Thanh toán bằng thẻ tín dụng/ghi nợ</b></h5>
+							</label>
 
-              <div class="list-account">
-                <div class="list-account-title">
-                  <span class="material-symbols-outlined">credit_card</span>
-                  <p>Danh sách thẻ tín dụng của bạn</p>
-                </div>
-                <div>
-                  <div class="account-item clickable">
-                    <img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
+							<div class="list-account">
+								<div class="list-account-title">
+									<span class="material-symbols-outlined">credit_card</span>
+									<p>Danh sách thẻ tín dụng của bạn</p>
+								</div>
+								<div class="list-account-padding">
+									<div class="account-item clickable">
+										<img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
 
-                    <div class="name-bank">
-                      <h5>Saccombank</h5>
-                      <h5 style="text-align: end"><b>*1108</b></h5>
-                    </div>
-                  </div>
+										<div class="name-bank">
+											<h5>Saccombank</h5>
+											<h5 style="text-align: end"><b>*1108</b></h5>
+										</div>
+									</div>
 
-                  <div class="account-item clickable">
-                    <img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
-                    <div class="name-bank">
-                      <h5>BIDV</h5>
-                      <h5 style="text-align: end"><b>*0319</b></h5>
-                    </div>
-                  </div>
+									<div class="account-item clickable">
+										<img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
+										<div class="name-bank">
+											<h5>BIDV</h5>
+											<h5 style="text-align: end"><b>*0319</b></h5>
+										</div>
+									</div>
 
-                  <div class="account-item clickable">
-                    <img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
-                    <div class="name-bank">
-                      <h5>Agribank</h5>
-                      <h5 style="text-align: end"><b>*1698</b></h5>
-                    </div>
-                  </div>
+									<div class="account-item clickable">
+										<img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
+										<div class="name-bank">
+											<h5>Agribank</h5>
+											<h5 style="text-align: end"><b>*1698</b></h5>
+										</div>
+									</div>
 
-                  <div class="account-item clickable addCreditCardBtn" style="color: #a3adad">
-                    <span class="material-symbols-outlined">add_card</span>
-                    <h5 class="">Thêm thẻ tín dụng mới</h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+									<div class="account-item clickable addCreditCardBtn" style="color: #a3adad">
+										<span class="material-symbols-outlined">add_card</span>
+										<h5 class="">Thêm thẻ tín dụng mới</h5>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
-          <div class="method method-three form-check">
-            <div class="method-choice">
-              <input class="material-symbols-outlined form-check-input" type="radio" value='2' name="pay_id" id="flexRadioDefault3" />
-              <label class="form-check-label" for="flexRadioDefault3">
-                <h5><b>Thanh toán bằng tài khoản ngân hàng</b></h5>
-              </label>
-              <div class="list-account">
-                <div class="list-account-title">
-                  <span class="material-symbols-outlined"> credit_card </span>
-                  <p>Danh sách tài khoản ngân hàng của bạn</p>
-                </div>
-                <div class="account-items">
+					<div class="method method-three form-check">
+						<div class="method-choice">
+							<input class="material-symbols-outlined form-check-input" type="radio" value='2' name="pay_id" id="flexRadioDefault3" />
+							<label class="form-check-label" for="flexRadioDefault3">
+								<h5><b>Thanh toán bằng tài khoản ngân hàng</b></h5>
+							</label>
+							<div class="list-account">
+								<div class="list-account-title">
+									<span class="material-symbols-outlined"> credit_card </span>
+									<p>Danh sách tài khoản ngân hàng của bạn</p>
+								</div>
+								<div class="account-items">
 
 
-                  <div class="account-item clickable">
-                    <img src="/imgs/vietcombank.png" alt="" />
-                    <div class="name-bank">
-                      <h5><%= data.bank_cards.bank_name %></h5>
-                      <h5 style="text-align: end"><b>*1108</b></h5>
-                    </div>
-                  </div>
+									<div class="account-item clickable">
+										<img src="/imgs/vietcombank.png" alt="" />
+										<div class="name-bank">
+											<h5><%= data.bank_cards.bank_name %></h5>
+											<h5 style="text-align: end"><b>*1108</b></h5>
+										</div>
+									</div>
 
-                  <!-- <div class="account-item clickable">
+									<!-- <div class="account-item clickable">
                     <img src="/imgs/bidv.png" alt="" />
                     <div class="name-bank">
                       <h5>BIDV</h5>
@@ -204,66 +204,66 @@
                     </div>
                   </div> -->
 
-                  <div class="account-item clickable addBankAccountBtn" style="color: #a3adad">
-                    <span class="material-symbols-outlined"> add_card </span>
-                    <h5 class="">Thêm tài khoản ngân hàng liên kết</h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="section-content__confirm-detail">
-        <!-- Default checkbox -->
-        <div class="section-content__confirm-method form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-          <label class="form-check-label" for="flexCheckDefault">
-            <h5>
-              Tôi đồng ý nhận email marketing bao gồm ưu đãi, gợi ý du lịch và
-              các cập nhật về sản phẩm cũng như dịch vụ từ 2Ways.
-            </h5>
-          </label>
-        </div>
+									<div class="account-item clickable addBankAccountBtn" style="color: #a3adad">
+										<span class="material-symbols-outlined"> add_card </span>
+										<h5 class="">Thêm tài khoản ngân hàng liên kết</h5>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="section-content__confirm-detail">
+				<!-- Default checkbox -->
+				<div class="section-content__confirm-method form-check">
+					<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+					<label class="form-check-label" for="flexCheckDefault">
+						<h5>
+							Tôi đồng ý nhận email marketing bao gồm ưu đãi, gợi ý du lịch và
+							các cập nhật về sản phẩm cũng như dịch vụ từ 2Ways.
+						</h5>
+					</label>
+				</div>
 
-        <!-- Checked checkbox -->
-        <div class="section-content__confirm-method form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-          <label class="form-check-label" for="flexCheckChecked">
-            <h5>
-              Gửi cho tôi các thông tin cập nhật mới nhất từ 2Ways.
-            </h5>
-          </label>
-        </div>
+				<!-- Checked checkbox -->
+				<div class="section-content__confirm-method form-check">
+					<input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
+					<label class="form-check-label" for="flexCheckChecked">
+						<h5>
+							Gửi cho tôi các thông tin cập nhật mới nhất từ 2Ways.
+						</h5>
+					</label>
+				</div>
 
-        <h5>
-          <b>Bạn có thể hủy đăng ký bất cứ lúc nào. Xem
-            <a href="/privacy-policy" class="privacy-policy">chính sách bảo mật</a> của chúng tôi.</b>
-        </h5>
+				<h5>
+					<b>Bạn có thể hủy đăng ký bất cứ lúc nào. Xem
+						<a href="/privacy-policy" class="privacy-policy">chính sách bảo mật</a> của chúng tôi.</b>
+				</h5>
 
-        <h5>
-          <b>Đặt phòng của bạn là đặt phòng trực tiếp với 2WAYs và bằng việc
-            hoàn tất đặt phòng này, bạn đồng ý với
-            <a href="/terms-of-use" class="term-use">điều kiện đặt phòng</a>,
-            <a href="/terms-of-use" class="term-use">điều khoản chung</a> và
-            <a href="/privacy-policy" class="privacy-policy">chính sách bảo mật</a>.</b>
-        </h5>
+				<h5>
+					<b>Đặt phòng của bạn là đặt phòng trực tiếp với 2WAYs và bằng việc
+						hoàn tất đặt phòng này, bạn đồng ý với
+						<a href="/terms-of-use" class="term-use">điều kiện đặt phòng</a>,
+						<a href="/terms-of-use" class="term-use">điều khoản chung</a> và
+						<a href="/privacy-policy" class="privacy-policy">chính sách bảo mật</a>.</b>
+				</h5>
 
-        <div class="button-confirm">
-          <button href="#" class="check-info check-info-booking">Kiểm tra lại thông tin</button>
-          <button href="/booking/success" class="submit-booking done-booking-btn" type='submit'>
-            Hoàn tất đặt phòng
-          </button>
-        </div>
+				<div class="button-confirm">
+					<button href="#" class="check-info check-info-booking">Kiểm tra lại thông tin</button>
+					<button href="/booking/success" class="submit-booking done-booking-btn" type='submit'>
+						Hoàn tất đặt phòng
+					</button>
+				</div>
 
-        <a href="/terms-of-use" class="term-use"><b>Các điều kiện đặt phòng là gì?</b></a>
-      </div>
-    </form>
-  </div>
-  <%# include('../../components/otp')  %>
-  <%- include('../../components/success-popup')  %>
+				<a href="/terms-of-use" class="term-use"><b>Các điều kiện đặt phòng là gì?</b></a>
+			</div>
+		</form>
+	</div>
+	<%# include('../../components/otp')  %>
+	<%- include('../../components/success-popup')  %>
 
-  <%- include('../../partials/footer') %>
+	<%- include('../../partials/footer') %>
 
 
 </body>
