--- a/src/public/styles/pages/notification/promotion.css
+++ b/src/public/styles/pages/notification/promotion.css
@@ -3,6 +3,7 @@
 @import url("/styles/partials/footer.css");
 @import url("/styles/components/next-page.css");
 @import url("/styles/components/noti-item-promo.css");
+@import url("/styles/partials/nav-tree.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -11,16 +12,19 @@ html {
 }
 
 body {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100%;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 .nofi-container {
     width: 80%;
     padding: 0;
-    margin: 12px 0 24px 0;
+    margin: 12px auto 24px auto;
     display: flex;
     gap: 12px;
     align-items: flex-start;
@@ -67,21 +71,21 @@ body {
     gap: 12px;
 }
 
-.aside-wrapper__aside-section p {
+.aside-wrapper__aside-section a {
     padding: 12px;
     margin: 0;
     width: 256px;
     font-weight: 500;
 }
 
-.aside-wrapper__aside-section p:hover {
+.aside-wrapper__aside-section a:hover {
     cursor: pointer;
     border-radius: 8px;
     background-color: var(--gray);
     transition: 0.3s;
 }
 
-.aside-wrapper__aside-section p:nth-child(2) {
+.aside-wrapper__aside-section a:nth-child(2) {
     background-color: var(--primary-color-1);
     color: white;
     border-radius: 8px;
@@ -93,6 +97,19 @@ body {
     width: 100%;
     align-items: flex-end;
     gap: 20px;
+}
+
+.noti--empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    width: 100%;
+}
+
+img.noti__img--empty {
+    object-fit: contain;
+    width: 15%;
 }
 
 button.btn--outlined.pri {
