--- a/src/public/styles/pages/site/privacy-policy.css
+++ b/src/public/styles/pages/site/privacy-policy.css
@@ -12,36 +12,33 @@ html {
 body {
     width: 100%;
     margin: 0;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: justify; */
 }
 
-ul {
+.private__container ul {
     list-style-type: disc;
 }
 
-li {
+.private__container li {
     margin: 8px 0;
     line-height: 1.5;
 }
 
-h1 {
+.private__container h2 {
     color: var(--dark-gray);
 }
 
 .private__container {
     width: 80%;
     max-width: 1152px;
-    margin: 12px auto;
+    margin: 12px auto 32px auto;
 }
 
 .private__header {
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-top: 0;
+    font-weight: 700;
 }
 
 .highlight {
