--- a/src/public/styles/pages/site/terms-of-use.css
+++ b/src/public/styles/pages/site/terms-of-use.css
@@ -12,11 +12,6 @@ html {
 body {
     width: 100%;
     margin: 0
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: justify; */
 }
 
 ul {
@@ -28,7 +23,7 @@ li {
     line-height: 1.5;
 }
 
-h1 {
+h2.term__header {
     color: var(--dark-gray);
 }
 
@@ -42,6 +37,7 @@ h1 {
     width: 100%;
     display: flex;
     justify-content: center;
+    font-weight: 700;
 }
 
 .highlight {
