--- a/src/public/styles/partials/footer.css
+++ b/src/public/styles/partials/footer.css
@@ -110,6 +110,7 @@ footer {
 	gap: 12px;
 	list-style-type: none;
 	margin: 0;
+
 	&>li {
 		margin: 0;
 	}
@@ -137,6 +138,7 @@ footer {
 	width: 65%;
 	height: 48px;
 	padding: 0 16px;
+	border-radius: 8px;
 }
 
 .footer-container__form {
