--- a/src/views/pages/notifications/promotion.ejs
+++ b/src/views/pages/notifications/promotion.ejs
@@ -2,54 +2,61 @@
 <html lang="vi">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-  <title>2WAYS.com</title>
-  <link rel="stylesheet" href="/styles/pages/notification/promotion.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+	<title>2WAYS.com</title>
+	<link rel="stylesheet" href="/styles/pages/notification/promotion.css">
+	<link rel="stylesheet" href="/styles/pages/search/daterangepicker.css">
 </head>
 
 <body>
+	<%- include('../../partials/header-medium') %>
+	<%- include('../../partials/nav-tree', { nav_tree__data: [
+    { text: 'Trang chủ', link: "/" },
+    { text: 'Thông báo', link: "#"},
+    { text: 'Thông tin khuyến mãi', link: "/notifications/promotion"}
+] }) %>
 
-  <main class="nofi-container">
-    <aside class="aside-wrapper">
-      <div class="aside-wrapper__aside-info">
-        <img class="aside-wrapper__aside-avatar" src="/imgs/avatar.png" alt="avatar" />
-        <div class="aside-wrapper__aside-title">
-          <p>Thông báo</p>
-        </div>
-      </div>
-      <hr />
-      <div class="aside-wrapper__aside-section">
-        <p class="btn-update"><a href="/notifications/account-update" class="btn-update">Cập nhật tài khoản</a></p>
-        <p class="btn-promo"><a href="/notifications/promotion" class="btn-update">Thông tin khuyến mãi</a></p>
-      </div>
-    </aside>
+	<main class="nofi-container">
+		<aside class="aside-wrapper">
+			<div class="aside-wrapper__aside-info">
+				<img class="aside-wrapper__aside-avatar" src="/imgs/avatar.png" alt="avatar" />
+				<div class="aside-wrapper__aside-title">
+					<p>Thông báo</p>
+				</div>
+			</div>
+			<hr />
+			<div class="aside-wrapper__aside-section">
+				<a href="/notifications/account-update" class="btn-update">Cập nhật tài khoản</a>
+				<a href="/notifications/promotion" class="btn-promo">Thông tin khuyến mãi</a>
+			</div>
+		</aside>
 
-    <section class="nofi__main">
-      <form action="/notifications/read-all" method="POST">
-        <button class="btn--outlined pri" type="submit">Đánh dấu tất cả là đã đọc</button>
-      </form>
-      <% if (data_noti.length == 0) { %>
-      <h3>Bạn chưa có thông báo</h3>
-      <% } else { %>
-      <% data_noti.forEach(function (noti) { %>
-      <%- include('../../components/noti-item-promo', {noti}) %>
-      <% }) %>
-      <% } %>
+		<section class="nofi__main">
+			<form action="/notifications/read-all" method="POST">
+				<button class="btn--outlined pri" type="submit">Đánh dấu tất cả là đã đọc</button>
+			</form>
+			<% if (data_noti.length == 0) { %>
+			<div class="noti--empty">
+				<img src="/imgs/noti-empty.png" alt="empty" class="noti__img--empty">
+				<h4>Bạn chưa có thông báo</h4>
+			</div>
+			<% } else { %>
+			<% data_noti.forEach(function (noti) { %>
+			<%- include('../../components/noti-item-promo', {noti}) %>
+			<% }) %>
+			<% } %>
 
-    </section>
-  </main>
+		</section>
+	</main>
 
-  <%- include('../../partials/footer.ejs') %>
+	<%- include('../../partials/footer.ejs') %>
 
-  <script src="/scripts/notifications/promotion.js"></script>
-  <script src="/scripts/search-bar.js"></script>
-  <script src="/scripts/header-medium.js"></script>
+	<script src="/scripts/notifications/promotion.js"></script>
+	<script src="/scripts/search-bar.js"></script>
+	<script src="/scripts/header-medium.js"></script>
 </body>
 
 </html>
