--- a/src/views/pages/notifications/account-update.ejs
+++ b/src/views/pages/notifications/account-update.ejs
@@ -5,17 +5,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
   <title>2WAYS.com</title>
   <link rel="stylesheet" href="/styles/pages/notification/account-update.css" />
 </head>
 
 <body>
   <%- include('../../partials/header-medium') %>
-  <%# include('../../partials/nav-tree', { nav_tree__data }) %>
+  <%- include('../../partials/nav-tree', { nav_tree__data: [
+    { text: 'Trang chủ', link: "/" },
+    { text: ' Thông báo', link: "/notifications/account-update"}
+] }) %>
+
 
   <main class="nofi-container">
     <aside class="aside-wrapper">
