--- a/src/views/pages/site/privacy-policy.ejs
+++ b/src/views/pages/site/privacy-policy.ejs
@@ -10,7 +10,10 @@
 
 <body>
     <%- include('../../partials/header-small') %>
-    <%# include('../../partials/nav-tree', { nav_tree__data }) %>
+    <%- include('../../partials/nav-tree', { nav_tree__data: [
+        { text: 'Trang chủ', link: "/" },
+        { text: 'Chính sách bảo mật và quyền riêng tư', link: "/privacy-policy"}
+    ] }) %>
 
     <main class="private__container">
         <h1 class="private__header">CHÍNH SÁCH BẢO MẬT VÀ QUYỀN RIÊNG TƯ</h1>
